# rec-sys-research

./: .gitignore  README.md
weighting_is_fun/: .gitignore  0_lastfm_360k.ipynb  0_lastfm_360k_als.ipynb  0_lastfm_360k_knn.ipynb  1_movielens_20M.ipynb  1_movielens_20M_autorec.ipynb  1_movielens_20m_als.ipynb  1_movielens_20m_knn.ipynb  1_movielens_20m_lmf.ipynb  2_movielens_100k.ipynb  2_movielens_100k_als.ipynb  2_movielens_100k_autorec.ipynb  2_movielens_100k_knn.ipynb  2_movielens_100k_lmf.ipynb  3_steam.ipynb  3_steam_als.ipynb  3_steam_knn.ipynb  5_taste_profile_als.ipynb  5_taste_profile_knn.ipynb  README.md  lastfm_360k_als_results.csv  lastfm_360k_experiment_results.csv  lastfm_360k_knn_results.csv  movielens_100k_als_results.csv  movielens_100k_autorec_results.csv  movielens_100k_experiment_results.csv  movielens_100k_knn_results.csv  movielens_100k_lmf_results.csv  movielens_20m_als_results.csv  movielens_20m_experiment_results.csv  movielens_20m_knn_results.csv  pyproject.toml  steam_als_results.csv  steam_experiment_results.csv  steam_knn_results.csv  taste_profile_als_results.csv  taste_profile_knn_results.csv  weighting_strategies.py  weighting_time_benchmark.ipynb  weighting_time_results.csv
weighting_is_fun/notebooks/: 0_lastfm_360k_als.ipynb  0_lastfm_360k_knn.ipynb  1_movielens_20M_autorec.ipynb  1_movielens_20m_als.ipynb  1_movielens_20m_knn.ipynb  1_movielens_20m_lmf.ipynb  2_movielens_100k_als.ipynb  2_movielens_100k_autorec.ipynb  2_movielens_100k_knn.ipynb  2_movielens_100k_lmf.ipynb  3_steam_als.ipynb  3_steam_knn.ipynb  4_taste_profile_als.ipynb  (+2 more)
(+296 files in other folders)
