[project]
name = "weighting-is-fun"
version = "0.1.0"
description = "Implicit feedback weighting strategies for collaborative filtering"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.10",
    "torch>=2.0",
    "pandas>=2.0",
    "implicit>=0.7",
    "optuna>=4.0",
    "cornac>=2.0",
    "jupyterlab>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]

